docs/product/v1.0.0/产品设计方案.md
> 文档版本：v1.0.0 | 更新日期：2026-06-07 | 对应软件版本：v1.0.0
> 变更摘要：MVP 初始版本，定义产品核心理念、双模式背词系统、自然拼读发音、FSRS 间隔重复、视频语境学习等基础功能

# 产品设计方案 — 暂定名「词境」(WordContext)

> 基于 10 款竞品调研 + 用户产品理念整理
> 目标平台：macOS Web 端（开发测试阶段）

---

## 一、产品核心理念

**一句话定位：**
> 自然拼读发音 + FSRS 科学记忆 + 语境视频学习 + 双模式背词

**四大核心卖点：**

| 卖点 | 描述 | 对标竞品优势 |
|------|------|-------------|
| 🔤 自然拼读发音 | 音标和单词发音基于 Phonics 规则拆解，可视化展示 | 全市场独家 |
| 🧠 FSRS 算法 | 比艾宾浩斯高效 20-40%，个性化记忆曲线 | 超越炭炭/百词斩 |
| 🎬 视频语境学习 | 自定义上传视频/文件，AI 提取词汇，语境绑定 | 借鉴 DejaVocab |
| 📋 双模式背词 | 列表速刷 + 沉浸详情，两种模式自由切换 | 融合炭炭+扇贝 |

---

## 二、双模式背词系统

### 2.1 模式一：列表速刷模式（类似炭炭）

**界面布局：**
```
┌─────────────────────────────────────────────────────┐
│  📖 四六级核心词汇 · Unit 3          [切换模式 ⚡]    │
│  ─────────────────────────────────────────────────── │
│                                                       │
│  abandon     /əˈbændən/        ●●●○○  [提示]  │
│  abstract    /ˈæbstrækt/       ●●○○○  [提示]  │
│  accelerate  /əkˈseləreɪt/     ●○○○○  [提示]  │
│  accompany   /əˈkʌmpəni/       ●●●●○  [提示]  │
│  accumulate  /əˈkjuːmjəleɪt/   ●●○○○  [提示]  │
│  ...（10-20 个单词一屏）                              │
│                                                       │
│  ─────────────────────────────────────────────────── │
│  Unit 3: 20词 | 已学 5 | 待复习 3 | 新词 12          │
│  [上一组] [下一组]                                     │
└─────────────────────────────────────────────────────┘
```

**交互逻辑：**

1. **鼠标悬停中间（单词区域）**→ 显示释义提示（半透明浮现）
2. **鼠标悬停右侧（评价区域）**→ 显示三个评价按钮 [😊 熟悉] [😐 模糊] [😣 忘记]
3. **点击评价**→ 自动记录并跳到下一个单词
4. **快捷键支持**
   - `J` / `↓`：下一个单词
   - `K` / `↑`：上一个单词
   - `1`：熟悉  `2`：模糊  `3`：忘记
   - `Space`：显示/隐藏释义
   - `Enter`：播放发音

---

### 2.2 模式二：沉浸详情模式（类似扇贝）

**子模式 A：选择释义** — 看词选义，四选一
**子模式 B：三段评价** — 熟悉/模糊/忘记

**模式切换：**
- 顶部按钮一键切换
- 记忆用户偏好，下次自动进入上次的模式
- 两种模式共享同一套 FSRS 学习进度

---

## 三、自然拼读发音系统（核心卖点 🔤）

### 3.1 核心规则体系

| 类别 | 规则 | 示例 |
|------|------|------|
| 辅音 | 单字母辅音，一音对一字母 | b→/b/, d→/d/ |
| 辅音组合 | 两个辅音字母组合发一个音 | sh→/ʃ/, ch→/tʃ/ |
| 短元音 | 闭音节中的元音发短音 | a→/æ/, e→/ɛ/ |
| 长元音 | 开音节中的元音发长音 | a→/eɪ/, e→/iː/ |
| R 控元音 | 元音 + r 改变发音 | ar→/ɑːr/, er→/ɜːr/ |
| 魔法 e | 末尾 e 使前面元音变长音 | cake, bike, home |

### 3.2 产品中的实现方式

单词发音可视化拆解，逐音节点击发音，音标独立可听，颜色编码系统（辅音蓝色、元音红色、组合紫色、静音灰色）。

### 3.3 数据模型

```typescript
interface PhonicsBreakdown {
  word: string;
  syllables: string[];
  phonemes: Phoneme[];
  stressIndex: number;
  silentLetters: number[];
}

interface Phoneme {
  grapheme: string;
  ipa: string;
  type: 'consonant' | 'vowel' | 'blend' | 'digraph' | 'r-controlled';
  color: string;
}
```

### 3.4 技术实现

- 音标库：CMU Pronouncing Dictionary 或 eSpeak
- 音节划分算法：最大首音原则（Maximal Onset Principle）
- 发音音频：预录制 44 个英语音标 + Web Speech API 兜底

---

## 四、FSRS 间隔重复系统

### 4.1 FSRS vs 艾宾浩斯

| 对比 | 艾宾浩斯 | FSRS |
|------|----------|------|
| 间隔 | 固定 1-2-4-7-15-30 天 | 个性化动态调整 |
| 参数 | 所有人相同 | 每个用户独立训练 |
| 效率 | 基准 | 比 SM-2 高 20-40% |

### 4.2 三种评价与 FSRS 映射

| 用户操作 | FSRS 评分 | 效果 |
|----------|-----------|------|
| 😊 熟悉 | 4 (Easy) | stability 大幅增加 |
| 😐 模糊 | 3 (Good) | stability 适度增加 |
| 😣 忘记 | 1 (Again) | stability 重置 |

---

## 五、视频语境学习系统

用户上传视频/文件 → AI 处理提取词汇 → 语境中学习 → 一键收藏进入 FSRS 复习

支持：MP4 / SRT / TXT / PDF / EPUB / 在线链接

---

## 六、完整功能清单

### MVP（第一阶段）
1. 列表速刷模式
2. 沉浸详情模式（选择释义 + 三段评价）
3. FSRS 间隔重复
4. 自然拼读发音
5. 音标发音
6. 内置词库（四六级/考研/雅思/托福）
7. 单词详情页
8. 学习统计
9. 快捷键
10. 数据本地存储（IndexedDB）

### 增强（第二阶段）
11. 视频语境学习
12. 词族系统
13. AI 短语提取
14. 语境绑定
15. 拼写测试
16. 随身听
17. PDF 导出
18. 数据导入导出

### 远期（第三阶段）
19. AI 助记生成
20. 词典集成
21. Chrome 扩展
22. 轻量游戏化
23. 多端同步

---

## 七、技术架构

### 技术栈
- 前端：React 18 + TypeScript + Vite
- UI：Tailwind CSS + shadcn/ui (macOS 风格)
- 状态管理：Zustand
- 本地存储：Dexie.js (IndexedDB)
- 音频：Howler.js + Web Speech API
- 算法：ts-fsrs

### 数据模型

```typescript
interface Word {
  id: string;
  word: string;
  phonetic: string;
  phonics: PhonicsBreakdown;
  definitions: Definition[];
  examples: Example[];
  etymology: string;
  wordFamily: string[];
  mnemonic: string;
  tags: string[];
}

interface Card {
  wordId: string;
  deckId: string;
  due: Date;
  stability: number;
  difficulty: number;
  retrievability: number;
  reps: number;
  lapses: number;
  state: 'new' | 'learning' | 'review' | 'relearning';
}

interface Deck {
  id: string;
  name: string;
  description: string;
  wordCount: number;
  tags: string[];
  bookMatch?: string;
  words: string[];
}
```

---

## 八、界面设计规范

### 设计原则
1. macOS 原生感 — 毛玻璃效果、圆角、系统字体
2. 信息密度适中
3. 键盘优先
4. 暗色/亮色跟随系统

### 色彩方案
- 主色调：#2563EB (蓝色，辅音)
- 强调色：#DC2626 (红色，元音)
- 成功色：#16A34A (绿色，熟悉)
- 警告色：#F59E0B (黄色，模糊)
- 错误色：#EF4444 (红色，忘记)

---

*文档版本：v1.0 | 2026-06-07*
