docs/product/v1.1.0/产品设计方案.md
> 文档版本：v1.1.0 | 更新日期：2026-06-07 | 对应软件版本：v1.1.0
> 变更摘要：新增暗色模式、学习统计面板、FSRS 参数自动训练、数据导入导出、词库扩充至 510 词等功能设计

# 产品设计方案 — 暂定名「词境」(WordContext)

> 基于 10 款竞品调研 + 用户产品理念整理
> 目标平台：macOS Web 端（开发测试阶段）

---

## 一、产品核心理念

**一句话定位：**
> 自然拼读发音 + FSRS 科学记忆 + 语境视频学习 + 双模式背词

**四大核心卖点：**

| 卖点 | 描述 | 对标竞品优势 |
|------|------|-------------|
| 🔤 自然拼读发音 | 音标和单词发音基于 Phonics 规则拆解，可视化展示 | 全市场独家 |
| 🧠 FSRS 算法 | 比艾宾浩斯高效 20-40%，个性化记忆曲线，v1.1 新增参数自动训练 | 超越炭炭/百词斩 |
| 🎬 视频语境学习 | 自定义上传视频/文件，AI 提取词汇，语境绑定 | 借鉴 DejaVocab |
| 📋 双模式背词 | 列表速刷 + 沉浸详情，两种模式自由切换 | 融合炭炭+扇贝 |

**v1.1 新增卖点：**

| 卖点 | 描述 | 价值 |
|------|------|------|
| 🌙 暗色模式 | 浅色/深色/跟随系统三模式切换 | 夜间学习护眼 |
| 📊 学习统计 | 日历热力图 + 趋势图 + 记忆分布 | 数据驱动学习 |
| 🔄 数据导入导出 | JSON/CSV 双向，Anki 格式导出 | 数据安全，迁移自由 |
| 🎯 FSRS 参数训练 | 基于个人复习数据自动优化算法参数 | 越用越精准 |

---

## 二、双模式背词系统

### 2.1 模式一：列表速刷模式（类似炭炭）

**界面布局：**
```
┌─────────────────────────────────────────────────────┐
│  📖 四六级核心词汇 · Unit 3          [切换模式 ⚡]    │
│  ─────────────────────────────────────────────────── │
│                                                       │
│  abandon     /əˈbændən/        ●●●○○  [提示]  │
│  abstract    /ˈæbstrækt/       ●●○○○  [提示]  │
│  accelerate  /əkˈseləreɪt/     ●○○○○  [提示]  │
│  accompany   /əˈkʌmpəni/       ●●●●○  [提示]  │
│  accumulate  /əˈkjuːmjəleɪt/   ●●○○○  [提示]  │
│  ...（10-20 个单词一屏）                              │
│                                                       │
│  ─────────────────────────────────────────────────── │
│  Unit 3: 20词 | 已学 5 | 待复习 3 | 新词 12          │
│  [上一组] [下一组]                                     │
└─────────────────────────────────────────────────────┘
```

**交互逻辑：**

1. **鼠标悬停中间（单词区域）**→ 显示释义提示（半透明浮现）
2. **鼠标悬停右侧（评价区域）**→ 显示三个评价按钮 [😊 熟悉] [😐 模糊] [😣 忘记]
3. **点击评价**→ 自动记录并跳到下一个单词
4. **快捷键支持**
   - `J` / `↓`：下一个单词
   - `K` / `↑`：上一个单词
   - `1`：熟悉  `2`：模糊  `3`：忘记
   - `Space`：显示/隐藏释义
   - `Enter`：播放发音

**v1.1 更新：**
- 速刷模式集成自然拼读展示（可折叠，按 `P` 键展开）
- 全面适配暗色模式样式

---

### 2.2 模式二：沉浸详情模式（类似扇贝）

**子模式 A：选择释义** — 看词选义，四选一
**子模式 B：三段评价** — 熟悉/模糊/忘记

**模式切换：**
- 顶部按钮一键切换
- 记忆用户偏好，下次自动进入上次的模式
- 两种模式共享同一套 FSRS 学习进度

**v1.1 更新：**
- 选择题智能干扰项：按词性优先匹配，同词性池中随机选择
- 全面适配暗色模式样式

---

## 三、自然拼读发音系统（核心卖点 🔤）

### 3.1 核心规则体系

| 类别 | 规则 | 示例 |
|------|------|------|
| 辅音 | 单字母辅音，一音对一字母 | b→/b/, d→/d/ |
| 辅音组合 | 两个辅音字母组合发一个音 | sh→/ʃ/, ch→/tʃ/ |
| 短元音 | 闭音节中的元音发短音 | a→/æ/, e→/ɛ/ |
| 长元音 | 开音节中的元音发长音 | a→/eɪ/, e→/iː/ |
| R 控元音 | 元音 + r 改变发音 | ar→/ɑːr/, er→/ɜːr/ |
| 魔法 e | 末尾 e 使前面元音变长音 | cake, bike, home |

### 3.2 产品中的实现方式

单词发音可视化拆解，逐音节点击发音，音标独立可听，颜色编码系统（辅音蓝色、元音红色、组合紫色、静音灰色）。

### 3.3 数据模型

```typescript
interface PhonicsBreakdown {
  word: string;
  syllables: string[];
  phonemes: Phoneme[];
  stressIndex: number;
  silentLetters: number[];
}

interface Phoneme {
  grapheme: string;
  ipa: string;
  type: 'consonant' | 'vowel' | 'blend' | 'digraph' | 'r-controlled';
  color: string;
}
```

### 3.4 技术实现

- 音标库：CMU Pronouncing Dictionary 或 eSpeak
- 音节划分算法：最大首音原则（Maximal Onset Principle）
- 发音音频：预录制 44 个英语音标 + Web Speech API 兜底

**v1.1 更新：**
- 音节划分死循环 Bug 已修复（`syllabify()` 中 `i--` 改为 `i = j - 1`）
- 发音质量升级：集成 Edge TTS API（免费、接近真人），Web Speech API 作为离线 fallback

---

## 四、FSRS 间隔重复系统

### 4.1 FSRS vs 艾宾浩斯

| 对比 | 艾宾浩斯 | FSRS |
|------|----------|------|
| 间隔 | 固定 1-2-4-7-15-30 天 | 个性化动态调整 |
| 参数 | 所有人相同 | 每个用户独立训练 |
| 效率 | 基准 | 比 SM-2 高 20-40% |

### 4.2 三种评价与 FSRS 映射

| 用户操作 | FSRS 评分 | 效果 |
|----------|-----------|------|
| 😊 熟悉 | 4 (Easy) | stability 大幅增加 |
| 😐 模糊 | 3 (Good) | stability 适度增加 |
| 😣 忘记 | 1 (Again) | stability 重置 |

### 4.3 v1.1 新增：FSRS 参数自动训练

| 项目 | 说明 |
|------|------|
| 训练阈值 | 累计 50 次复习后触发首次训练，之后每 50 次重新训练 |
| 训练方式 | 简化版 5 维参数优化算法 |
| 持久化 | 训练后参数保存到 IndexedDB settings 表 |
| 效果 | 算法参数随使用越来越贴合个人记忆特征 |

**5 维训练维度：**

| 维度 | 优化参数 | 依据 |
|------|---------|------|
| 实际记忆保持率 | `request_retention` | Review 状态下成功回忆比例 |
| 首次评价分布 | `w[0]-w[3]` 初始稳定性 | 用户评分倾向 |
| 评价难度分布 | `w[4]` 难度参数 | Again/Easy 比例 |
| 复习间隔表现 | `w[8]` 稳定性增长因子 | 成功/遗忘的平均间隔比 |
| 复习速度 | `w[17]` 短期记忆参数 | Learning 状态下的平均耗时 |

---

## 五、视频语境学习系统

用户上传视频/文件 → AI 处理提取词汇 → 语境中学习 → 一键收藏进入 FSRS 复习

支持：MP4 / SRT / TXT / PDF / EPUB / 在线链接

---

## 六、完整功能清单

### MVP（第一阶段）— v1.0.0 已完成
1. 列表速刷模式
2. 沉浸详情模式（选择释义 + 三段评价）
3. FSRS 间隔重复
4. 自然拼读发音
5. 音标发音
6. 内置词库（四六级/考研/雅思/托福）
7. 单词详情页
8. 学习统计
9. 快捷键
10. 数据本地存储（IndexedDB）

### v1.1 新增功能（已完成）
11. 🌙 暗色模式（浅色/深色/跟随系统）
12. 📊 学习统计面板（日历热力图 + 趋势图 + 记忆分布 + 每日目标）
13. 🧠 FSRS 参数自动训练
14. 🔄 数据导入导出（JSON/CSV 双向）
15. 📖 词库扩充至 510 词（CET4 核心词汇）
16. 🔊 发音质量升级（Edge TTS + Web Speech API fallback）
17. 🐛 Bug 修复（数据重复插入、快捷键提示渲染、音节划分死循环）

### 增强（第二阶段）
18. 视频语境学习
19. 词族系统
20. AI 短语提取
21. 语境绑定
22. 拼写测试（听写模式）
23. 随身听
24. PDF 导出
25. 搜索与筛选（Cmd+K）

### 远期（第三阶段）
26. AI 助记生成
27. 词典集成
28. Chrome 扩展
29. 轻量游戏化
30. 多端同步
31. PWA 离线支持

---

## 七、技术架构

### 技术栈
- 前端：React 19 + TypeScript + Vite
- UI：Tailwind CSS v4 + shadcn/ui (macOS 风格)
- 状态管理：Zustand（v1.1 拆分为多个 Store）
- 本地存储：Dexie.js (IndexedDB)
- 音频：Howler.js + Web Speech API + Edge TTS（v1.1 新增）
- 算法：ts-fsrs（v1.1 新增参数训练）
- 图表：Recharts（v1.1 新增）
- 图标：Lucide React（v1.1 新增）

### v1.1 新增数据模型

```typescript
// 用户设置（v1.1 新增）
interface SettingsEntry {
  id: string;                    // 'default'
  theme: 'light' | 'dark' | 'system';
  dailyNewWordGoal: number;
  dailyReviewGoal: number;
  fsrsParameters: number[] | null;
  lastTrainedAt: Date | null;
  ttsProvider: 'web-speech' | 'edge-tts';
}

// 每日统计快照（v1.1 新增）
interface DailyStatEntry {
  id: string;                    // '2026-06-07'
  date: string;
  newWordsLearned: number;
  wordsReviewed: number;
  totalReviews: number;
  correctRate: number;
  studyMinutes: number;
}

// studyLogs 增强（v1.1 新增字段）
interface StudyLog {
  id?: number;
  date: string;
  wordId: string;
  rating: number;
  timeSpent: number;
  // v1.1 新增
  state: number;
  elapsed_days: number;
  scheduled_days: number;
  review_duration: number;
}
```

---

## 八、界面设计规范

### 设计原则
1. macOS 原生感 — 毛玻璃效果、圆角、系统字体
2. 信息密度适中
3. 键盘优先
4. 暗色/亮色跟随系统

### 色彩方案
- 主色调：#2563EB (蓝色，辅音)
- 强调色：#DC2626 (红色，元音)
- 成功色：#16A34A (绿色，熟悉)
- 警告色：#F59E0B (黄色，模糊)
- 错误色：#EF4444 (红色，忘记)

### v1.1 新增：暗色配色方案

| 元素 | 亮色 | 暗色 |
|------|------|------|
| 背景 | `#F8FAFC` | `#0F172A` |
| 卡片 | `rgba(255,255,255,0.72)` | `rgba(15,23,42,0.72)` |
| 主文字 | `slate-800` | `slate-200` |
| 次要文字 | `slate-500` | `slate-400` |
| 边框 | `slate-100/200` | `slate-700/600` |

---

*文档版本：v1.1.0 | 最后更新：2026-06-07*
